src/K8S/webapi-deployment.yaml
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: webapi
  labels:
    app: webapi
spec:
  selector:
    matchLabels:
      app: webapi
      tier: backend
  replicas: 2
  template:
    metadata:
      labels:
        app: webapi
        tier: backend
    spec:
      containers:
      - name: webapi
        image: timejogador/luxone:1.1
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
        ports:
        - containerPort: 5000
        imagePullPolicy: Never #Always
