src/K8S/webapi-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: webapi-lb
  labels:
    app: webapi
spec:
  selector:
    app: webapi
  ports:
    - name: http
      port: 5000
      targetPort: 80
  type: LoadBalancer
