src/K8S/webapi-service.yaml
apiVersion: v1 
kind: Service
metadata:
  name: webapi
  labels:
    app: webapi
    tier: backend
spec:
  type: ClusterIP
  ports:
  - port: 80
    protocol: TCP
    name: http
    targetPort: 5000
  selector:
    app: webapi
    tier: backend
