src/K8S/webspa-ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webspa-ingress
spec:
  tls:
  - secretName: nginxsecret
  rules:
  - host: "*.sysphera.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: webspa
            port:
              number: 9900
